--- a/create-react-express/client/public/index.html
+++ b/create-react-express/client/public/index.html
@@ -26,8 +26,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 
+<!-- font awesome kit ys -->
+<script src="https://kit.fontawesome.com/720ed4220d.js"></script>
+
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Grenze&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ewert&display=swap" rel="stylesheet">
 
   <title>AN-Y</title>
 </head>
