--- a/create-react-express/client/public/index.html
+++ b/create-react-express/client/public/index.html
@@ -30,7 +30,7 @@
 <script src="https://kit.fontawesome.com/720ed4220d.js"></script>
 
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Ewert&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Milonga&display=swap" rel="stylesheet">
 
   <title>AN-Y</title>
 </head>
